--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,9 @@
         "initializer_list": "cpp",
         "ranges": "cpp",
         "*.tcc": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "cstdint": "cpp",
+        "iterator": "cpp",
+        "list": "cpp"
     }
 }
